--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,54 @@
 * {
   font-family: "Poppins", sans-serif;
+  background: rgb(56, 56, 56);
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
 
 .App {
   height: 100vh;
-}
-
-.chat-box {
-  width: 100%;
-  height: 90%;
-  padding: 5vh 2vh;
-  box-sizing: border-box;
-  background: lightgrey;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.chat-box {
+  width: 90%;
+  height: 90vh;
+  max-height: 90vh;
+  margin: 2vh 0;
+  padding: 5vh 2vh;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  overflow: auto;
+  border: 1px solid lightgrey;
+  border-radius: 10px;
+  
+}
+
 .text-box {
+  width: 100%;
   height: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text-box form {
+  width: 90%;
+  height: 4vh;
+  min-height: 30px;
+  border: 1px lightgray solid;
+  border-radius: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .message {
@@ -28,42 +58,61 @@
   align-items: flex-start;
 }
 
+.message .msg-box {
+  background: rgb(131, 131, 131);
+}
+
 .message p {
   color: black;
+  background: transparent;
+  font-size: 1.5vh;
 }
 
 .client-message {
   align-items: flex-end;
 }
 
+.client-message .msg-box {
+  background: rgb(30, 82, 250);
+}
+
 .client-message p {
-  color: blue;
+  color: white;
+  background: transparent;
 }
 
 .msg-box {
-  background: white;
-  border: 1px solid black;
   border-radius: 30px;
-  padding: 0 10px;
+  padding: 0 15px;
   margin-bottom: 2vh;
 }
 
-.msg-input-box {
-  margin: 0;
-  padding: 0;
+form input {
+  height: 0 !important;
+  position: relative;
   outline: none;
   border: none;
-  width: 90%;
+  width: 95%;
   height: 10vh;
-  font-size: 1.25rem;
   padding: 1rem;
+  box-sizing: border-box;
+  font-size: 1.5vh;
+  color: white;
+  background: transparent;
+
 }
 
 .send-msg-btn {
   padding: 0 5px;
   margin: 0;
   border: 0;
-  background: lightblue;
-  height: 10vh;
-  width: 6%;
+  height: 40px;
+  width: 40px;
+  background: transparent;
 }
+
+.send-msg-btn svg {
+  background: transparent;
+  position: relative;
+}
+
